[package]
name = "rs-nyancatchat-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.2"
actix-web-actors = "4.3.0"
socket2 = "0.5.3"  # Add this line
mysql = "25.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
openssl = { version = "0.10.66", features = ["vendored"] }
aes = "0.8.0"
block-modes = "0.9.1"
rand = "0.8.5"
hex = "0.4.3"
tokio = { version = "1.32.0", features = ["full"] }
futures-util = "0.3.28"
log = "0.4.20"
env_logger = "0.10.0"
actix-files = "0.6.2"  # Add this line
chrono = "0.4.26"  # Add this line
actix = "0.13"
ctr = "0.9.2"